[package]
name = "rusty_mos"
version = "1.0.0"
edition = "2021"
authors = ["kai_Ker <22373080@buaa.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
